name:                duggregn

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

license:             PublicDomain
license-file:        LICENSE
author:              Henry Eklind
maintainer:          Henry Eklind <henrye@kth.se>
category:            Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2
homepage:            https://github.com/karlek/duggregn
bug-reports:         https://github.com/karlek/duggregn/issues
synopsis:            Minimalistic BitTorrent client.
description:

  Duggregn aims to be a minimalistic graphical BitTorrent client.
  .
  @TL Note.@ Duggregn is the swedish word for drizzle; I'm quite modest.
  .
  For more information see:
  <https://github.com/karlek/duggregn/blob/master/README.md>

extra-source-files:  README.md
                   , archlinux-2015.10.01-dual.iso.torrent

source-repository head
  type:               git
  location:           git@github.com:karlek/duggregn.git


library
  default-language:    Haskell2010
  hs-source-dirs:      src
  default-extensions:  OverloadedStrings, RankNTypes
  exposed-modules:     Data.Torrent
                    ,  Data.Bencode
                    ,  Network.IP
                    ,  Network.BitTorrent.Tracker
                    ,  Network.BitTorrent.PWP
                    ,  Network.BitTorrent.Handshake

  build-depends:       base == 4.*
                    ,  url
                    ,  binary
                    ,  bytestring
                    ,  cryptohash
                    ,  lens-family
                    ,  attoparsec
                    ,  network-ip

  ghc-options:         -Wall

executable duggregn
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:    OverloadedStrings, RankNTypes

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9
                     , base16-bytestring >=0.1 && <0.2
                     , bytestring >=0.10 && <0.11
                     , ghci-pretty >=0.0 && <0.1
                     , HTTP >=4000.2 && <4000.3
                     , http-types >=0.8 && <0.9
                     , attoparsec >=0.13 && <0.14
                     , lens-family >=1.2 && <1.3
                     , binary >=0.7 && <0.8
                     , cryptohash >=0.11 && <0.12
                     , url >=2.1 && <2.2
                     , duggregn
                     , network
                     , split
                     , network-ip
                     , network-socket-options
                     , either-unwrap
                     , cmdargs
                     , hex
                     , async

  -- Directories containing source files.
  hs-source-dirs:      duggregn

  -- Base language which the package is written in.
  default-language:    Haskell2010
  ghc-options:         -Wall
